# masterplanOptimiserV3---Testing

./: README.md  TEST_COVERAGE.md  conftest.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-desktop-tests.bat  run-server-tests.bat  setup.bat  vitest.config.desktop.ts  vitest.config.server.ts
desktop_backend/: conftest.py  test_crud.py  test_data_management.py  test_normalizer.py  test_optimization.py
desktop_frontend/: AuthContext.test.tsx  DataTable.test.tsx  EventContext.test.tsx  ThemeContext.test.tsx  ToastContainer.test.tsx  ToastContext.test.tsx  UIComponents.test.tsx  UIComponentsExtra.test.tsx  calendarTaskUtils.test.ts  dateFormat.test.ts  environment.test.ts  gcalColors.test.ts  optimizationApi.test.ts
server_backend/: conftest.py  test_admin_activation.py  test_admin_events.py  test_admin_users.py  test_calendar.py  test_gdpr.py  test_history.py  test_middleware.py  test_notifications.py  test_publish.py  test_security.py
server_frontend/: AnnouncementBanner.test.tsx  AuthContext.test.tsx  BootstrapPage.test.tsx  DeleteMyDataLink.test.tsx  Footer.test.tsx  LoginPage.test.tsx  Logo.test.tsx  ThemeContext.test.tsx  ThemeToggle.test.tsx  UIComponents.test.tsx  apiFetch.test.ts  reauth.test.ts
